<resources>
    <string name="app_name">ACME-Explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Faustino Ayala Veras</string>
    <string name="nav_header_subtitle">Fauayaver@alum.us.es</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">Cerrar sesión</string>

    <string name="log_in">Iniciar Sesión</string>
    <string name="log_in_google">Continuar con Google</string>
    <string name="sign_in_up">¿Todavía no tienes cuenta? \n¡Regístrate!</string>
    <string name="user_registration">Registro de usuarios</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="sign_in">Regístrate con tu E-mail</string>
    <string name="log_in_up">¿Ya tienes cuenta?\nInicia sesión</string>
    <string name="menu_main_menu">Menu Principal</string>
    <string name="menu_available_trips">Viajes Disponibles</string>
    <string name="menu_selected_trips">Viajes Seleccionados</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="switch_column">Columnas</string>
    <string name="filter">Filtrar</string>
    <string name="trips_details">Detalles del Viaje</string>
    <string name="departure">Salida:</string>
    <string name="arrival">Llegada:</string>
    <string name="arrival_place">Lugar de Llegada</string>
    <string name="distance">Lugar de salida:</string>
    <string name="trip_tag">Viaje</string>
    <string name="bought_tag">comprado</string>
    <string name="choose">Seleccionar</string>
    <string name="price">Precio:</string>
    <string name="departure_date">Fecha de salida:</string>
    <string name="arrival_date">Fecha de llegada:</string>
    <string name="departure_place">Lugar de salida:</string>
    <string name="filter_message">viajes con las condiciones de filtro</string>
    <string name="filter_trips">Filtrar viajes</string>
    <string name="date">13 abr 2020</string>
    <string name="begin_date">Fecha de inicio:</string>
    <string name="end_date">Fecha de fin:</string>
    <string name="max_price">Precio máximo</string>
    <string name="min_price">Precio mínimo</string>

    <string name="apply_filters">Aplicar</string>
    <string name="date_message">Por favor elegir una fecha mayor o igual a la actual</string>
    <string name="filter_alert">Error al aplicar filtros, por favor verificar los
        filtros y vuelva  a intentarlo</string>
    <string name="clear_filters">Limpiar</string>

    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="login_error_message_1">¡¡El correo electrónico no puede estar vacío!!</string>
    <string name="login_error_message_2">¡¡La contraseña no puede estar vacía!!</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">¿¡Aún no has validado tu cuenta!?
        \n¿Quieres que te enviemos un correo de verificación? </string>
    <string name="log_in_google_play_services_error">Debes actualizar Google Play Services antes de continuar.</string>
    <string name="log_in_download_gps">Actualizar</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificación a tu dirección</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar un correo de verificación a tu cuenta</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="user_no_found_error">No hay registro de usuario correspondiente a esta cuenta</string>
    <string name="wrong_password_error">Contraseña incorrecta</string>
    <string name="device_temporal_blocked_error">Hemos bloqueado todas las solicitudes de este
        dispositivo debido a una actividad inusual. Intenta nuevamente más tarde.</string>
    <string name="network_error">Error de red, por favor verifica tu conexión de internet.</string>
    <string name="welcome">Bienvenido</string>
    <string name="user_disabled_error">La cuenta de usuario ha sido deshabilitada por un ADMINISTRADOR</string>
    <string name="email_badly_formatted_error">Dirección de correo electrónico inválida</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="required_field">Campo requerido.</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden.</string>
    <string name="password_requirements">"La contraseña tiene que "</string>
    <string name="requirement_1">ser al menos de 6 letras, "</string>
    <string name="requirement_2">"tener 1 numero, "</string>
    <string name="requirement_3">"tener 1 letra mayúscula, "</string>
    <string name="requirement_4">"tener 1 carácter especial, "</string>
    <string name="requirement_5">"ser sin espacios, "</string>
    <string name="user_create_message">Usuario registrado correctamente</string>
    <string name="user_create_error">Ha ocurrido un erro al registrar el nuevo usuario</string>
    <string name="verification_mail_sent">Por favor verifica tu correo electrónico</string>
    <string name="profile">Mi perfil</string>
    <string name="save_user">Actualizar datos de usuario</string>

    <string name="new_trip">Publicar Viaje</string>
    <string name="trip_destiny_country">País de destino</string>
    <string name="trip_destiny_city">Ciudad de destino</string>
    <string name="trip_origin_city">Lugar de salida</string>
    <string name="trip_origin_country">País de salida</string>
    <string name="trip_departure_date">Fecha de salida</string>
    <string name="trip_arrival_date">Fecha de llegada</string>
    <string name="trip_price">Precio</string>
    <string name="trip_description">Descripción</string>
    <string name="trip_save_data_trip">Guardar Viaje</string>
    <string name="trip_edit_data_trip">Editar Viaje</string>
    <string name="trip_delete_data_trip">Eliminar Viaje</string>
    <string name="trip_saved">Viaje guardado exitosamente.</string>
    <string name="new_trip_date_error_1">La fecha de salida tiene que ser mayor de la fecha actual.</string>
    <string name="new_trip_date_error_2">La fecha de llegada tiene que ser mayor de la fecha de salida.</string>
    <string name="new_trip_date_error_3">Fecha de salida vacía</string>
    <string name="trip_no_saved">Error al guardar el viaje</string>
    <string name="description_date">Publicado el</string>
    <string name="confirmation_delete_trip">¿Seguro de que desea eliminar este viaje?</string>
    <string name="delete_trip_msg">Viaje eliminado exitosamente.</string>
    <string name="delete_trip_error">No se ha podido eliminar el viaje.</string>
    <string name="selected_trip">Viaje seleccionado</string>
    <string name="discarded_trip">Viaje descartado</string>
    <string name="trip_to_save">¿Desea publicar este viaje?</string>
    <string name="cancel_create_trip">¿Seguro que desea salir?\n Se perderán los datos </string>
    <string name="exit">Salir</string>
    <string name="gallery_request_permission">Necesitamos acceder a tu galería para poder elegir una foto.</string>
    <string name="allow_permission">Permitir</string>
    <string name="gallery_permission_no_granted">No es posible elegir una foto sin acceder a la galería.</string>
    <string name="gallery_permission_no_granted_2">El permiso para acceder a la galería esta denegado permanentemente,
        debes acceder a los ajustes para poder otorgarlo.</string>
    <string name="error_message">Ha ocurrido un error al realizar la petición del clima</string>
    <string name="main">main</string>
    <string name="query_api_id_api_key"><![CDATA[&appid=439d4b804bc8187953eb36d2a8c26a02]]></string>
    <string name="base_url">https://openweathermap.org/data/2.5/weather?</string>
    <string name="folderTrips">Trips</string>

    <string name="find_me">Ubicación Actual</string>
    <string name="where_i_am">¿Donde estoy?</string>
    <string name="location_rationale_1">Necesitamos tu ubicación para mostrarte donde te encuentras.</string>
    <string name="location_rationale_2">Necesitamos su ubicación para calcular la distancia al punto de salida.</string>
    <string name="location_permission_no_granted_1">No es posible mostrar donde estas sin acceder a la ubicación del dispositivo.</string>
    <string name="location_permission_no_granted_2">No podemos saber la distancia sin acceder a la ubicación del dispositivo.</string>
    <string name="loading_distance">Cargando distancia</string>
    <string name="interest_sites">Sitios de Interés</string>
    <string name="picture_no_picked">Foto no seleccionada</string>
    <string name="dialog_permission_tittle">Perminso denegado</string>
    <string name="location_permission_no_granted_3">El permiso para acceder a la ubicación del
        dispositivo esta denegado permanentemente, debes acceder a los ajustes para poder otorgarlo.</string>
    <string name="open_setting">Abrir ajustes</string>
    <string name="to_back">Pulsa atras dos veces para volver a la etapa anterior.</string>
    <string name="invalid_request_msg">Falta el parámetro de consulta requerido (ubicación o radio).</string>
    <string name="over_query_limit_msg">la cuota de peticiones ha sido superada.</string>
    <string name="unknown_error_msg">Error del lado del servidor; por favor intente de nuevo.</string>
    <string name="zero_results_msg">La búsqueda fue exitosa pero no arrojó resultados</string>
    <string name="places_api_url">https://maps.googleapis.com/maps/api/place/nearbysearch/json</string>
    <string name="error_places_request_msg">Ha ocurrido un error con la consulta!!</string>
    <string name="maps">Mapas</string>
</resources>
