<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_main_menu">

    <fragment
        android:id="@+id/nav_main_menu"
        android:name="us.master.acme_explorer.ui.main_menu.MainMenuFragment"
        android:label="@string/menu_main_menu"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_nav_main_menu_to_nav_selected_trips"
            app:destination="@id/nav_selected_trips" />
        <action
            android:id="@+id/action_nav_main_menu_to_nav_available_trips"
            app:destination="@id/nav_available_trips" />
    </fragment>

    <fragment
        android:id="@+id/nav_available_trips"
        android:name="us.master.acme_explorer.ui.available_trips.AvailableTripsFragment"
        android:label="@string/menu_available_trips"
        tools:layout="@layout/fragment_trips_base_view">
        <action
            android:id="@+id/action_nav_available_trips_to_nav_active_trip"
            app:destination="@id/nav_active_trip"
            app:popUpTo="@id/nav_active_trip"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_available_trips_to_nav_trips"
            app:destination="@id/nav_new_trip" />
    </fragment>

    <fragment
        android:id="@+id/nav_selected_trips"
        android:name="us.master.acme_explorer.ui.selected_trips.SelectedTripsFragment"
        android:label="@string/menu_selected_trips"
        tools:layout="@layout/fragment_trips_base_view">
        <action
            android:id="@+id/action_nav_selected_trips_to_nav_active_trip"
            app:destination="@id/nav_active_trip"
            app:popUpTo="@id/nav_active_trip"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_active_trip"
        android:name="us.master.acme_explorer.ui.active_trip.ActiveTripFragment"
        android:label="@string/trips_details"
        tools:layout="@layout/fragment_active_trip">
        <action
            android:id="@+id/action_nav_active_trip_fragment_to_nav_available_trips"
            app:destination="@id/nav_available_trips"
            app:popUpTo="@id/nav_available_trips"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_active_trip_fragment_to_nav_selected_trips"
            app:destination="@id/nav_selected_trips"
            app:popUpTo="@id/nav_selected_trips"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_active_trip_fragment_to_nav_new_trip"
            app:destination="@id/nav_new_trip"
            app:popUpTo="@id/nav_new_trip"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_active_trip_to_nav_maps"
            app:destination="@id/nav_maps"
            app:popUpTo="@id/nav_maps"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_new_trip"
        android:name="us.master.acme_explorer.ui.trips.TripsFragment"
        android:label="@string/new_trip"
        tools:layout="@layout/fragment_trips">
        <action
            android:id="@+id/action_nav_new_trips_to_nav_available_trips"
            app:destination="@id/nav_available_trips"
            app:popUpTo="@id/nav_available_trips"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_maps"
        android:name="us.master.acme_explorer.ui.maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_nav_maps_to_nav_main_menu"
            app:destination="@id/nav_main_menu"
            app:popUpTo="@id/nav_main_menu"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_maps_to_nav_active_trip"
            app:destination="@id/nav_active_trip"
            app:popUpTo="@id/nav_active_trip"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>